Set nav links to uppercase and fix spacing with flex box

--- a/less/main.less
+++ b/less/main.less
@@ -63,9 +63,12 @@ body, ul li, a {
   overflow: hidden;
   transition: height 0.4s;
   height: 0px;
+  display: flex;
+  justify-content: space-evenly !important;
   .nav-link {
     color: #f4c844;
     font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
   }
   .nav-link:hover {
     font-weight:bold;
